--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -123,9 +123,9 @@ html, body {
 }
 
 /* = INTRODUCTION ============================================ */
-.intro {
+.main__intro {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro__body {
@@ -189,6 +189,26 @@ html, body {
     top: 0;
     left: 0;
 }
+
+.intro__zooov-stroke {
+    position: absolute;
+    max-height: 548px;
+    right:0;
+    top: 160px;
+}
+
+.intro__zooov-stroke img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+position: absolute;
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
+object-fit: cover;
 
 /* = WHAT IS BARF ============================================ */
 .barf {
