--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,7 @@ html, body {
 .header__logo img {
     max-width: 100%;
     display: block;
-
+    object-fit: cover;
 }
 
 .header__menu {
@@ -81,6 +81,10 @@ html, body {
 
 .menu__list li:not(:last-of-type) {
     margin-right: 50px;
+}
+
+.menu__link:hover {
+    text-decoration: underline 2px #961914;
 }
 
 /* = MAIN =================================================== */
@@ -148,6 +152,10 @@ html, body {
     background: #961914;
 }
 
+.button_red:hover {
+    background: #75110D;
+}
+
 .intro__image {
     position: absolute;
     width: 100%;
@@ -157,26 +165,11 @@ html, body {
 }
 
 .intro__zooov-stroke {
-
     position: absolute;
-    max-height: 548px;
     right:0;
-    top: 160px;
+    top: 20%;
+    max-height: 548px;
 }
-
-.intro__zooov-stroke img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-position: absolute;
-width: 100%;
-height: 100%;
-top: 0;
-left: 0;
-object-fit: cover;
-
 /* = WHAT IS BARF ============================================ */
 .barf {
     grid-area: barf;
