--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -452,7 +452,8 @@ html, body {
     font-size: 46px;
     font-weight: 700;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
+    margin-top: 55px;
+    margin-bottom: 32px;
     color: #000000;
 }
 
@@ -461,6 +462,7 @@ html, body {
     font-weight: 600;
     padding-top: 24px;
     padding-bottom: 16px;
+    margin: 0px;
     color: #000000;
 }
 
