--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -299,6 +299,10 @@ html, body {
     margin: 0px 0px 1.25vh 0px;
 }
 
+.intro__title::nth-of-type(4n) {
+    background-color: lime;
+}
+
 .intro__text {
     max-width: 370px;
     margin: 0px 0px 3.125vh 0px;
@@ -620,11 +624,98 @@ html, body {
 .diets {
     grid-area: diets;
     display:grid;
-    grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
+    grid-template-columns: minmax(auto, 326px) minmax(auto, 97px) minmax(auto, 777px);
     grid-template-areas:
-        ". text .";
-    background-color:burlywood;
+        "diets__subtitle . diets__text"
+        "diets__items diets__items diets__items";
+        padding-bottom: 80px;
 }
+.diets__subtitle {
+    grid-area: diets__subtitle;
+    display: grid;
+    align-self: center;
+    margin: 0px;
+}
+
+.diets__text {
+    grid-area: diets__text;
+}
+
+.diets__items {
+    grid-area: diets__items;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding-top: 72px;
+    column-gap: 26px;
+    row-gap: 50px;
+}
+.diets__item {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: auto 1fr minmax(40px,auto) / 1fr;
+}
+.diets__image {
+    position: relative;
+    padding: 0px 0px 90% 0px;
+    margin: 0px 0px 47px 0px;
+    grid-auto-rows: 1fr;
+}
+
+.diets__image img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+.diets_destination {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 130%;
+    padding-bottom: 6px;
+    margin: 0px;
+    color: #000000;
+}
+
+.diets__compo, .diets_weight {
+    font-size: 13px;
+    color: #9F9E9D;
+}
+
+.diets__compo {
+    padding-bottom: 16px;
+}
+
+.diets__descrition {
+    font-size: 16px;
+    line-height: 140%;
+    letter-spacing: 0em;
+    color: #434242;
+    padding-bottom: 11px;
+}
+
+.diets_weight {
+    padding-bottom: 24px;
+}
+
+.button_white {
+    color: #961914;
+    background: #ffffff;
+    border: solid 1px #961914;
+}
+
+.button_white:hover {
+    background: #EAD1D0;
+    border: none;
+}
+
+.diets_button {
+    justify-self: start;
+}
+
+
 
 /* = DIET CALCULATION ========================================= */
 .diet-calc {
