--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -761,10 +761,44 @@ html, body {
 .why-zooov {
     grid-area: why-zooov;
     display:grid;
-    grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
+    padding-bottom: 190px;
+    grid-template-columns: minmax(auto, 1200px);
     grid-template-areas:
-        ". text .";
-    background-color:chocolate;
+    "why-zooov__subtitle"
+    "why-zooov__items";
+}
+
+.why-zooov__subtitle {
+    grid-area: why-zooov__subtitle;
+    margin-top: 0px;
+    margin-bottom: 60px;
+    display: grid;
+    justify-self: start;
+}
+
+.why-zooov__items {
+    grid-area: why-zooov__items;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding-top: 3px;
+    column-gap: 27px;
+    row-gap: 50px;
+}
+
+.why-zooov__item {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: auto 1fr minmax(40px,auto) / 1fr;
+}
+
+.why-zooov__image {
+    position: relative;
+    padding-bottom: 22px;
+}
+
+.why-zooov__minisubtitle {
+    padding-top: 0px;
+    padding-bottom: 8px;
 }
 
 /* = ABOUT ZOOOV: FROM ZOOOV WITH CARE AND LOVE =============== */
@@ -781,10 +815,44 @@ html, body {
 .delivery {
     grid-area: delivery;
     display:grid;
-    grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
+    padding-bottom: 200px;
+    grid-template-columns: minmax(auto, 1200px);
     grid-template-areas:
-        ". text .";
-    background-color:crimson;
+    "delivery__subtitle"
+    "delivery__items";
+}
+
+.delivery__subtitle {
+    grid-area: delivery__subtitle;
+    margin-top: 0px;
+    margin-bottom: 60px;
+    display: grid;
+    justify-self: start;
+}
+
+.delivery__items {
+    grid-area: delivery__items;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding-top: 3px;
+    column-gap: 27px;
+    row-gap: 50px;
+}
+
+.delivery__item {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: auto 1fr minmax(40px,auto) / 1fr;
+}
+
+.delivery__image {
+    position: relative;
+    padding-bottom: 22px;
+}
+
+.delivery__minisubtitle {
+    padding-top: 0px;
+    padding-bottom: 8px;
 }
 
 /* = FAQ ====================================================== */
