--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -424,7 +424,6 @@ html, body {
 /* = WHAT IS BARF ============================================ */
 /* - Позиционирование -------------------------------------- */
 .barf {
-    grid-area: barf;
     display:grid;
     grid-template: 1fr / minmax(auto, 612px) minmax(auto, 588px);
     grid-template-areas:
@@ -502,7 +501,6 @@ html, body {
 
 /* = DIET COMPOSITION ========================================= */
 .diet-compo {
-    grid-area: diet-compo;
     padding-top: 80px;
     padding-bottom: 203px;
     display:grid;
@@ -622,7 +620,6 @@ html, body {
 
 /* = ZOOOV DIETS ============================================== */
 .diets {
-    grid-area: diets;
     display:grid;
     grid-template-columns: minmax(auto, 326px) minmax(auto, 97px) minmax(auto, 777px);
     grid-template-areas:
@@ -717,7 +714,6 @@ html, body {
 
 /* = DIET CALCULATION ========================================= */
 .diet-calc {
-    grid-area: diet-calc;
     margin-bottom: 180px;
     display:grid;
     grid-template: 1fr / minmax(auto, 1200px);
@@ -759,7 +755,6 @@ html, body {
 
 /* = WHY ZOOOV ================================================ */
 .why-zooov {
-    grid-area: why-zooov;
     display:grid;
     padding-bottom: 190px;
     grid-template-columns: minmax(auto, 1200px);
@@ -803,18 +798,102 @@ html, body {
 
 /* = ABOUT ZOOOV: FROM ZOOOV WITH CARE AND LOVE =============== */
 .about-zooov {
-    grid-area: about-zooov;
     display:grid;
     grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
     grid-template-areas:
-        ". text .";
-    background-color:cornflowerblue;
+        ". about-zooov__content .";
+    background: url('../img/about-us/about-us-waves.png') -20px center no-repeat, #FFF4F3;
+}
+
+.about-zooov__content {
+    grid-area: about-zooov__content;
+    display:grid;
+    grid-template-columns: 46.33% 53.77%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    grid-template-areas:
+        "about-zooov__gallery about-zooov__description";
+}
+
+.about-zooov__gallery {
+    grid-area: about-zooov__gallery;
+    display: grid;
+    grid-template-columns: minmax(auto, 194px) minmax(auto, 281px) minmax(auto, 81px);
+}
+
+.gallery__big {
+    grid-area: 1 / 1 / 3 / 3;
+    position: relative;
+}
+
+.gallery__big img {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+}
+
+.gallery__small {
+    grid-area: 2 / 2 / 4 / 4;
+    position: relative;
+}
+
+.gallery__small img{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    bottom: 0;
+    right: 0;
+}
+
+.gallery__dog {
+    grid-area: 3 / 1 / 3 / 1;
+    position: relative;
+    max-width: 183px;
+    z-index: 2;
+}
+
+.gallery__dog img{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: -91px;
+    left: -50px;
+}
+
+.gallery__heart {
+    grid-area: 2 / 3 / 2 / 3;
+    position: relative;
+    max-width: 120px;
+    z-index: 2;
+}
+
+.gallery__heart img{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 135px;
+    left: -40px;
+}
+
+.about-zooov__description {
+    grid-area: about-zooov__description;
+    padding-left: 9%;
+    padding-right: 10%;
+}
+
+.about-zooov__subtitle {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    line-height: 130%;
 }
 
 /* = DELIVERY: HOW TO GET ZOOOV? ============================== */
 .delivery {
     grid-area: delivery;
     display:grid;
+    padding-top: 180px;
     padding-bottom: 200px;
     grid-template-columns: minmax(auto, 1200px);
     grid-template-areas:
